tg_parser/tests/invalid/wire_inside_gate.tg
gate G(in a; out y) {
    wire w;
}
